--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "^2.3.1",
+    "vue-expandable-image": "^0.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
   },
