--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-audio": "0.0.12",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.4.0"
